# iam-sorry

./: CLAUDE.md  README.md  iam-sorry  pol1.json  pyproject.toml  rclone-adapter  requirements.txt
.github/workflows/: publish-pypi.yml
iamsorry/: __init__.py  cli.py  core.py
tests/: __init__.py  test_core.py
